# SatImageFilters

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  generate_test_image.py  output.txt  profile_cuda.py  profile_cuda_ncu.py  profile_cuda_nvprof.py
.github/workflows/: coverage.yml
docs/: mainpage.dox
include/: check_cuda_errors.cuh  check_cuda_errors.h  command_line_parser.h  cuda_mem_manager.h  image_operation.h  image_processor.h  kernel.h  main_window.h  tiff_image.h
include/gui/: image_processor.h  main_window.h
profilers/: profile_cpu.py  profile_cuda_nvprof.py  profile_opencl.py
src/: command_line_parser.cpp  cuda_mem_manager.cpp  image_processor.cpp  kernel.cpp  kernel.h  main.cpp  main_window.cpp  main_window.ui  tiff_image.cpp  tiff_image.cu  tiff_image.h  tiff_image_opencl.cpp
src/gui/: image_processor.cpp  main_window.cpp
src/kernels/: kernels.cl
src/mains/: benchmark_cpu.cpp  benchmark_gpu.cpp  benchmark_opencl.cpp  main.cpp  main_opencl.cpp  speedtest.cpp
tests/: test_kernel.cpp  test_kernel1.txt  test_kernel3.txt  test_kernel4.txt  test_tiff_image.cpp  test_tiff_image_old.cpp  test_tiff_image_opencl.cpp
